# s3-macaroon

./: .clever.json  Cargo.toml  README.md  package.json
src/: credentials.rs  crypto.rs  key.rs  main.rs
